241120
ai 서포트
객체배열
팁스