@@ -26,3 +26,20 @@ __Alt+Shift+S__ : Source
 
 ###### // TODO
 - 주석라인에 다시 확인 가능한 체크포인트 생성
+
+#### STS4 플러그인 설치
+1. Help - Install New Software 에 아래 주소 입력
+	https://takezoe.github.io/amateras-update-site/
+	
+	모두 체크하고 넘기기
+
+2. STS4 폴더의 ini 파일 맨 아래에
+	--add-opens=java.desktop/java.beans=ALL-UNNAMED
+	 
+	 추가하기
+
+#### Amateras U.M.L
+- 클래스 다이어그램 생성 
+	new - other - AmaterasUML - Class Diagram
+
+
